# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,8 @@ import savedJobsRouter from "./savedJobs";
 import adminRouter from "./admin";
 import employerRouter from "./employer";
 import stripeRouter from "./stripe";
+import anthropicRouter from "./anthropic/index";
+import applicationsRouter from "./applications";
 
 const router: IRouter = Router();
 
@@ -16,5 +18,7 @@ router.use("/saved-jobs", savedJobsRouter);
 router.use("/admin", adminRouter);
 router.use("/employer", employerRouter);
 router.use("/stripe", stripeRouter);
+router.use("/anthropic", anthropicRouter);
+router.use("/applications", applicationsRouter);
 
 export default router;
